# mermaid-ascii-python

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.wasm  README.md  build.rs  llm.plan.status  llm.working.status  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml  static.yml
.tmp/: llm.plan.status
_site/: index.html
agent-teams/: checkpoint.sh  orchestrator.sh  rollback.sh  start.sh  stop.sh  worker.sh
examples/: bt_simple.expect  diamond.expect  edges.expect  flowchart.expect  gen.sh  lr_fanout.expect  lr_simple.expect  multiline.expect  pipeline.expect  sysarch.expect
scripts/: gen_examples.sh  orchestrator.sh  start.sh  stop.sh  worker.sh
src/: canvas.hom  charset.hom  config.hom  layout.hom  layout_types.hom  lib.rs  main.rs  parser.hom  pathfinder.hom  render.rs  svg_renderer.rs  types.hom
src/dep/: graph.rs  grid_data.rs  layout_state.rs  path_state.rs
src/graph/: graph.rs  grid_data.rs  layout_state.rs  path_state.rs
src/mermaid_ascii/: __init__.py  __main__.py  api.py  ast.py  config.py  grammar.py  graph.py  layout.py  parser.py  render.py  types.py
src/rust/: Cargo.toml  config.rs  lib.rs  wasm.rs
src/rust/layout/: graph.rs  mod.rs  pathfinder.rs  sugiyama.rs  types.rs
src/rust/parsers/: base.rs  mod.rs
src/rust/renderers/: ascii.rs  canvas.rs  charset.rs
src/rust/src/: lib.rs  main.rs
src/rust/src/layout/: graph.rs  mod.rs  sugiyama.rs  types.rs
src/rust/src/parsers/: base.rs  flowchart.rs  mod.rs
src/rust/src/renderers/: ascii.rs  canvas.rs  charset.rs  mod.rs
src/rust/src/syntax/: types.rs
src/rust/syntax/: types.rs
tests/: test_ast.py  test_examples.py  test_graph.py  test_layout.py  test_parser.py  test_render.py
tests/e2e/: test_binary.rs  test_examples.py  test_examples.rs  test_rust_binary.py  test_smoke.py
tests/hom/: test_canvas.hom  test_dummy.rs  test_graph.rs  test_layout.hom  test_parser.hom  test_pathfinder.hom
tests/rust/: test_layout_graph.rs  test_layout_sugiyama.rs  test_layout_types.rs  test_parsers_base.rs  test_renderers_ascii.rs  test_renderers_canvas.rs  test_renderers_charset.rs  test_syntax_types.rs
tests/unit/: test_ast.py  test_graph.py  test_layout.py  (+2 more)
(+19 files in other folders)
