[package]
name = "mermaid-ascii"
version = "0.1.0"
edition = "2024"
description = "Mermaid flowchart syntax to ASCII/Unicode text renderer"
authors = []

[[bin]]
name = "mermaid-ascii"
path = "src/rust/main.rs"
required-features = ["cli"]

[lib]
name = "mermaid_ascii"
path = "src/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "test_binary"
path = "tests/e2e/test_binary.rs"

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen"]

[dependencies]
petgraph = "0.6"
clap = { version = "4", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
opt-level = "s"
lto = true
