[project]
name = "mermaid-ascii"
version = "0.1.0"
description = "Mermaid flowchart syntax to ASCII/Unicode text output"
requires-python = ">=3.12"
dependencies = [
    "parsimonious>=0.10",
    "networkx>=3.0",
    "click>=8.0",
]

[project.scripts]
mermaid-ascii = "mermaid_ascii.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaid_ascii"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
